--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,26 @@
     transform: rotate(360deg);
   }
 }
+
+.card-container{
+  display: inline-flex;
+  flex-wrap: wrap;
+  width: 17rem;
+  padding: 2px;
+  border-color: #282c34;
+  border: 2px;
+  border: solid;
+  margin: 20px;
+}
+    .card-img img{
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+
+.card-text{
+  
+  text-align: left;
+}
+
+
